WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70089
Speculation failures in ValueToInt32 are causing a 2x slow-down in Kraken/stanford-crypto-pbkdf2
https://bugs.webkit.org/show_bug.cgi?id=70089
Summary
Speculation failures in ValueToInt32 are causing a 2x slow-down in Kraken/sta...
Filip Pizlo
Reported
2011-10-13 22:56:39 PDT
Patch forthcoming.
Attachments
the patch
(4.54 KB, patch)
2011-10-13 23:01 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(3.79 KB, patch)
2011-10-13 23:02 PDT
,
Filip Pizlo
barraclough
: review-
Details
Formatted Diff
Diff
fixed patch
(3.80 KB, patch)
2011-10-13 23:10 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-10-13 23:01:15 PDT
Created
attachment 110961
[details]
the patch
Filip Pizlo
Comment 2
2011-10-13 23:02:35 PDT
Created
attachment 110962
[details]
the patch
WebKit Review Bot
Comment 3
2011-10-13 23:02:56 PDT
Attachment 110961
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:64: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 4
2011-10-13 23:04:53 PDT
Attachment 110962
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:64: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 5
2011-10-13 23:05:11 PDT
Comment on
attachment 110962
[details]
the patch actually I think i see a problem
Gavin Barraclough
Comment 6
2011-10-13 23:07:49 PDT
I think we need to ensure the result of the call is zero extended to fill the register.
Filip Pizlo
Comment 7
2011-10-13 23:10:53 PDT
Created
attachment 110968
[details]
fixed patch
WebKit Review Bot
Comment 8
2011-10-13 23:15:02 PDT
Attachment 110968
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:64: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 9
2011-10-14 00:07:16 PDT
Landed in
r97446
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug