Speculation failures in ValueToInt32 are causing a 2x slow-down in Kraken/stanford-crypto-pbkdf2 https://bugs.webkit.org/show_bug.cgi?id=70089

Reviewed by Gavin Barraclough.

If we can't truncate to Int32 using machine code, then don't fail
speculation. Just call JSC::toInt32.

* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::callOperation):
* dfg/DFGOperations.h:
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileValueToInt32):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/86175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97446 268f45cc-cd09-0410-ab3c-d52691b4dbfc